# smooth-voxel-renderer

./: CMakeLists.txt  README.md
src/: Camera.h  SurfaceReconstruction.cpp  SurfaceReconstruction.h  config.h  main.cpp
src/shaders/: shader.frag  shader.vert
